# solver

./: .clang-format  CMakeLists.txt  Makefile  compile.sh  readme.md
.cache/clangd/index/: main.cpp.AC1C79DBD8F1F052.idx  parser.cpp.137BF39899B2A0D0.idx  parser.h.F92CA5E13121C698.idx
src/: main.cpp  parser.cpp  parser.h
